edited learning object template

--- a/templates/views/elearning/learningObject.jade
+++ b/templates/views/elearning/learningObject.jade
@@ -31,7 +31,6 @@ block js
       });
     });
 
-
 mixin learningObject(currLO)
   .container-fluid
     .row
@@ -129,32 +128,24 @@ mixin comment-thread(comments)
         +comment-post(comment)
 
 mixin reactions(action)
-  .row
-    .col-md-2
+    .col-md-1
       form(method='post', style="margin-bottom: 0px; margin-top: 0px;")
-        input(type='hidden', name='action', value='reactions.addLike')
-        button(type='submit').btn.btn-link.btn-lg #{currentLO.likes.length} &nbsp;
+        input(type='hidden', name='action', value='reactions.addLike')    
+        button(type='submit').btn.btn-link.btn-lg #{currentLO.likes.length} &nbsp; #{user.isLiked}
           i.fa.fa-thumbs-o-up.fa-lg(aria-hidden="true")
     
-    .col-md-2
+    .col-md-1
       form(method='post', style="margin-bottom: 0px; margin-top: 0px;")
         input(type='hidden', name='action', value='reactions.addHappy')
         button(type='submit').btn.btn-link.btn-lg #{currentLO.happy.length} &nbsp;
           i.fa.fa-smile-o.fa-lg(aria-hidden="true")
   
-    .col-md-2
+    .col-md-1
       form(method='post', style="margin-bottom: 0px; margin-top: 0px;")
         input(type='hidden', name='action', value='reactions.addSad')
         button(type='submit').btn.btn-link.btn-lg #{currentLO.sad.length}
           i.fa.fa-frown-o.fa-lg(aria-hidden="true")
-  //- else
-    .row
-      button(type='submit' disabled='disabled').btn.btn-link.btn-lg #{currentLO.likes.length} &nbsp;
-        i.fa.fa-thumbs-o-up.fa-lg(aria-hidden="true")
-      button(type='submit' disabled='disabled').btn.btn-link.btn-lg #{currentLO.happy.length} &ensp;
-        i.fa.fa-smile-o.fa-lg(aria-hidden="true")
-      button(type='submit' disabled='disabled').btn.btn-link.btn-lg #{currentLO.sad.length} &ensp;
-        i.fa.fa-frown-o.fa-lg(aria-hidden="true")
+  
 
 block content
   .container
@@ -163,12 +154,14 @@ block content
         .row
           .panel.panel-info
             .panel-body
-              hr
-              +reactions()
               +learningObject(currentLO)
-              +comment-form()
-              +comment-thread(comments)
-
+              hr
+              .row
+                +reactions()
+              .row
+                +comment-thread(comments)
+                +comment-form()
+              
       .col-md-4
         .row
           .panel.panel-info
