refactored signup function

--- a/public/styles/elearning/elearning.less
+++ b/public/styles/elearning/elearning.less
@@ -119,3 +119,9 @@ body {
 .container.margin-top {
   margin-top: 20px;
 }
+
+.user-form {
+  /*margin-top: 85px;*/
+  /*130 to accomodate main header (logo + links) and blue community header*/
+  margin-top: 60px;
+}
