--- a/templates/views/elearning/analytics.jade
+++ b/templates/views/elearning/analytics.jade
@@ -81,6 +81,8 @@ block content
                   a(href='/elearning/analytics') Dashboard
                 li
                   a(href='/elearning/analytics/learning-objects/allindustries') Analytics by Learning Objects
+                li
+                  a(href='/elearning/analytics/users') Analytics by Users
       .col-md-9.col-sm-4.dashboard
         +Most(data.mostPopularLO, data.mostCommentedLO, data.mostReactedLO, data.numCourses, data.numLO, data.numUsers)
   script(src='/js/elearning-graphs/learningObjectReactions.js')
