--- a/templates/views/elearning/analyticsLOList.jade
+++ b/templates/views/elearning/analyticsLOList.jade
@@ -22,6 +22,8 @@ block content
                   a(href='/elearning/analytics') Dashboard
                 li.active
                   a(href='/elearning/analytics/learning-objects/allindustries') Analytics by Learning Objects
+                li
+                  a(href='/elearning/analytics/users') Analytics by Users
       .col-md-9.col-sm-4.dashboard
         .dropdown
           | Filter by 
