Added the recommendation algorithm in the recommended view

--- a/templates/views/elearning/recommended.jade
+++ b/templates/views/elearning/recommended.jade
@@ -126,7 +126,7 @@ block content
     .panel.panel-default
       .panel-body
         if viewStyle == 'grid'
-          +recommendedLO-grid(learningObjects)
+          +recommendedLO-grid(data.recommendedLearningObjects)
         else
-          +recommendedLO-list(learningObjects)
+          +recommendedLO-list(data.recommendedLearningObjects)
 
