--- a/templates/layouts/elearning.jade
+++ b/templates/layouts/elearning.jade
@@ -95,9 +95,10 @@ html
           if user
             //- if user.canAccessKeystone
               //- li: a(href='/keystone') Open Keystone
-            span.user-name #{user.name.full}&nbsp;&nbsp;
-            i.fa.fa-bell-o(aria-hidden="true")
-            | &nbsp;&nbsp;&nbsp;&nbsp;
+            a(href='/profile').not-active.login-link
+              span.user-name #{user.name.full}&nbsp;&nbsp;
+              i.fa.fa-bell-o(aria-hidden="true")
+              | &nbsp;&nbsp;&nbsp;&nbsp;
             a(href='/keystone/signout', class="not-active login-link") Sign Out
           else
             a(href='/keystone/signin?from=' + loginRedirect, class="not-active login-link") Sign In
