--- a/public/styles/community/public-content.less
+++ b/public/styles/community/public-content.less
@@ -22,7 +22,7 @@
     color: white;
     font-weight: bold;
     position: relative;
-    padding: inherit;
+    padding: 8px 16px 8px 16px;
 
     &.focus {
       padding: 0;
@@ -222,7 +222,7 @@
     }
 
     .summary {
-      margin-left: 162px;
+      margin-left: 118px;
 
       .title {
         color: black;
@@ -237,6 +237,38 @@
         font-weight: normal;
         margin-right: 5px;
       }
+    }
+  }
+
+  #multimedia {
+    text-align: center;
+    overflow: hidden;
+    padding: 3px;
+
+    [class^='col-'] {
+      max-width: 100%;
+      padding: 3px;
+    }
+
+    .img-wrapper{
+    	width: 100%;
+    	padding-bottom: 100%;
+    	position: relative;
+      overflow: hidden;
+
+      &:hover img{
+        transform: scale(1.1);
+      }
+    }
+
+    .img-wrapper img{
+      transition: all 0.4s ease;
+    	position: absolute;
+    	top: 0;
+    	bottom: 0;
+    	left: 0;
+    	right: 0;
+    	min-height: 100%;
     }
   }
 }
