--- a/templates/layouts/community.jade
+++ b/templates/layouts/community.jade
@@ -15,6 +15,7 @@ html
     //- Customise the stylesheet for your site by editing /public/styles/site.less
     //- All .less files will be automatically compiled and minified in production.
     link(href="/styles/site.min.css", rel="stylesheet")
+    link(href="/bower_components/lightgallery/dist/css/lightgallery.min.css", rel="stylesheet")
     //- link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css', integrity='sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ', crossorigin='anonymous')
 
     link(rel="stylesheet" type="text/css" href="/styles/cards.css")
@@ -195,8 +196,13 @@ html
     //- them specifically here, instead of bootstrap-3.3.5.min.js
     script(src='/js/bootstrap/bootstrap-3.3.5.min.js')
     script(type="text/javascript" src="/styles/slick/slick.min.js")
+    script(src='/bower_components/lightgallery/demo/js/lightgallery.min.js')
+    script(src='/bower_components/lightgallery/demo/js/lg-thumbnail.min.js')
+    script(src='/bower_components/theia-sticky-sidebar/dist/ResizeSensor.js')
+    script(src='/bower_components/theia-sticky-sidebar/dist/theia-sticky-sidebar.js')
     script(src='/js/slider.js')
     script(src='/js/dropdown.js')
+    script(src='/js/community-public.js')
 
     //- The KeystoneJS Content Editor provides support for ks-editable data attributes,
     //- which generate links to edit content for users who can access Keystone
