--- a/templates/layouts/elearning-analytics.jade
+++ b/templates/layouts/elearning-analytics.jade
@@ -85,6 +85,12 @@ html
 						//- 	else
 						//- 		li: a(href='/keystone/signin') Sign In
 			div#community-nav.navbar-fixed-top
+				ol.breadcrumb.community-breadcrumb
+					li
+						a(href="/") Home
+					each breadcrumb in breadcrumbs
+						li
+							a(href=breadcrumb.link) #{breadcrumb.text}
 				#user-login-links
 					if user
 						span.user-name #{user.name.full}&nbsp;&nbsp;
