--- a/templates/views/elearning/learningObject.jade
+++ b/templates/views/elearning/learningObject.jade
@@ -63,13 +63,13 @@ mixin recommendedTopics(recLO)
     .media
       .media-left
         if lo.thumbnail.exists
-          a(href=lo.url)
+          a(href=lo.url + "?type=recommended")
             img(src=lo._.thumbnail.limit(100, 100) alt=lo.video.title).img-rounded
         else
-          a(href=lo.url)
+          a(href=lo.url + "?type=recommended")
             img(src="/images/image-not-available.png", alt=lo.title, height="100px", weight="100px").img-rounded
       .media-body
-        a(href=lo.url)
+        a(href=lo.url + "?type=recommended")
           h5=lo.title
           span= lo.content.brief.substring(0, 50)
 
