Added the analytics for recommended LO Views

--- a/templates/views/elearning/analyticsLOList.jade
+++ b/templates/views/elearning/analyticsLOList.jade
@@ -21,9 +21,11 @@ block content
                 li
                   a(href='/elearning/analytics') Dashboard
                 li.active
-                  a(href='/elearning/analytics/learning-objects/allindustries') Analytics by Learning Objects
+                  a(href='/elearning/analytics/learning-objects/allindustries') Analytics of Learning Objects
                 li
-                  a(href='/elearning/analytics/users') Analytics by Users
+                  a(href='/elearning/analytics/users') Analytics of Users
+                li
+                  a(href='/elearning/analytics/recommendedViews') Analytics of Recommended Learning Objects
       .col-md-9.col-sm-4.dashboard
         .dropdown
           | Filter by 
